--- a/Qt-ui/gamescreenwidget.ui
+++ b/Qt-ui/gamescreenwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>650</width>
-    <height>450</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>150</y>
+     <x>10</x>
+     <y>0</y>
      <width>231</width>
      <height>81</height>
     </rect>
@@ -44,6 +44,17 @@
    <property name="text">
     <string>Go back to main menu</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>70</y>
+     <width>481</width>
+     <height>411</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="mainLayout"/>
   </widget>
  </widget>
  <resources/>
