--- a/app/GameScreenWidget.ui
+++ b/app/GameScreenWidget.ui
@@ -6,17 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>650</width>
-    <height>500</height>
+    <width>750</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="gamemodeLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>40</x>
      <y>0</y>
      <width>231</width>
      <height>81</height>
@@ -35,7 +35,7 @@
   <widget class="QPushButton" name="backToMenuButton">
    <property name="geometry">
     <rect>
-     <x>440</x>
+     <x>530</x>
      <y>30</y>
      <width>171</width>
      <height>24</height>
@@ -48,8 +48,8 @@
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>70</y>
+     <x>220</x>
+     <y>150</y>
      <width>481</width>
      <height>411</height>
     </rect>
