--- a/app/GameScreenWidget.ui
+++ b/app/GameScreenWidget.ui
@@ -18,7 +18,7 @@
     <rect>
      <x>40</x>
      <y>0</y>
-     <width>231</width>
+     <width>251</width>
      <height>81</height>
     </rect>
    </property>
@@ -29,7 +29,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Game started!</string>
+    <string>Type of Gamemode</string>
    </property>
   </widget>
   <widget class="QPushButton" name="backToMenuButton">
@@ -59,9 +59,9 @@
   <widget class="QLabel" name="playerTurnLabel">
    <property name="geometry">
     <rect>
-     <x>220</x>
+     <x>250</x>
      <y>80</y>
-     <width>231</width>
+     <width>421</width>
      <height>81</height>
     </rect>
    </property>
@@ -75,7 +75,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Player1's turn</string>
+    <string>Who's turn</string>
    </property>
    <property name="scaledContents">
     <bool>false</bool>
