--- a/app/GameScreenWidget.ui
+++ b/app/GameScreenWidget.ui
@@ -49,7 +49,7 @@
    <property name="geometry">
     <rect>
      <x>220</x>
-     <y>150</y>
+     <y>180</y>
      <width>481</width>
      <height>411</height>
     </rect>
@@ -167,6 +167,34 @@
    </property>
    <property name="text">
     <string>Switch Turn</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="gameMessageLabel">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>130</y>
+     <width>291</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Comic Sans MS</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
  </widget>
